--- a/redux-saga/tsconfig.json
+++ b/redux-saga/tsconfig.json
@@ -6,6 +6,10 @@
     "noImplicitAny": true,
     "sourceMap": true
   },
+  "include": [
+    "*.ts",
+    "*.tsx"
+  ],
   "exclude": [
     "node_modules"
   ]
