--- a/real-world/package.json
+++ b/real-world/package.json
@@ -6,7 +6,6 @@
     "clean": "rm -rf dist",
     "build:webpack": "NODE_ENV=production webpack --config config/webpack.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "serve": "http-server -p 3000",
     "start": "webpack-dashboard -- node server.js"
   },
   "repository": {
@@ -19,41 +18,53 @@
   },
   "homepage": "https://github.com/bcbcarl/typed-react",
   "dependencies": {
-    "humps": "^1.1.0",
-    "isomorphic-fetch": "^2.1.1",
-    "lodash": "^4.0.0",
-    "normalizr": "^2.0.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.2.1",
-    "react-router": "^2.7.0",
-    "react-router-redux": "^4.0.0-rc.1",
-    "redux": "^3.2.1",
-    "redux-logger": "^2.4.0",
+    "@types/isomorphic-fetch": "0.0.31",
+    "@types/lodash": "^4.14.38",
+    "@types/react": "^0.14.47",
+    "@types/react-dom": "^0.14.18",
+    "@types/react-redux": "^4.4.32",
+    "@types/react-router": "^2.0.38",
+    "@types/react-router-redux": "^4.0.34",
+    "@types/redux": "^3.6.31",
+    "@types/redux-devtools": "^3.0.34",
+    "@types/redux-devtools-dock-monitor": "^1.1.29",
+    "@types/redux-devtools-log-monitor": "^1.0.29",
+    "@types/redux-logger": "^2.6.32",
+    "@types/redux-thunk": "^2.1.31",
+    "@types/webpack-env": "^1.12.1",
+    "humps": "^2.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.16.6",
+    "normalizr": "^2.2.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-optimize": "^1.0.1",
-    "concurrently": "^2.2.0",
     "express": "^4.14.0",
-    "http-server": "^0.9.0",
-    "redux-devtools": "^3.1.0",
-    "redux-devtools-dock-monitor": "^1.0.1",
-    "redux-devtools-log-monitor": "^1.0.3",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.1.1",
     "source-map-loader": "^0.1.5",
-    "ts-loader": "^0.8.2",
+    "ts-loader": "^1.2.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "^1.8.10",
-    "webpack": "^1.9.11",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.9.1",
-    "webpack-notifier": "^1.4.0"
+    "typescript": "^2.1.1",
+    "webpack": "^1.13.3",
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-notifier": "^1.4.1"
   }
 }
