--- a/real-world/tsconfig.json
+++ b/real-world/tsconfig.json
@@ -4,11 +4,14 @@
     "target": "es2015",
     "jsx": "react",
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "sourceMap": true
   },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
   "exclude": [
-    "tsDist",
     "dist",
     "node_modules",
     "webpack.config.js"
