--- a/redux-saga/package.json
+++ b/redux-saga/package.json
@@ -4,8 +4,6 @@
   "description": "TypeScript Redux Saga example",
   "main": "main.tsx",
   "scripts": {
-    "clean": "rm -rf dist",
-    "test": "babel-node sagas.spec.js | tap-spec",
     "start": "budo main.tsx:build.js --dir ./ --verbose  --live -- -p tsify -t babelify"
   },
   "repository": {
@@ -18,22 +16,23 @@
   },
   "homepage": "https://github.com/bcbcarl/typed-react",
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "redux": "^3.3.1",
-    "redux-saga": "^0.11.0"
+    "@types/react": "^0.14.47",
+    "@types/react-dom": "^0.14.18",
+    "@types/redux": "^3.6.31",
+    "@types/redux-saga": "^0.9.30",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.12.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "budo": "^9.0.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
-    "tsify": "^1.0.3",
-    "typescript": "^1.8.10"
+    "budo": "^9.2.1",
+    "tsify": "^2.0.2",
+    "typescript": "^2.1.1"
   }
 }
