--- a/allow-js/package.json
+++ b/allow-js/package.json
@@ -27,6 +27,10 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "http-server": "^0.9.0",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2",
